--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
   <h1>MYLES HARRIS</h1>
   <p>Welcome to my website!</p>
+  <p>this is my first commit</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
