homepage first draft

--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
 <html>
 
+<head>
+  <title>what is Myles doing?</title>
+  <link href="./resources/css/index.css" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+</head>
+
 <body>
-  <h1>MYLES HARRIS</h1>
-  <p>Welcome to my website!</p>
-  <p>this is my first commit</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <h1 class="homepage-name">MYLES HARRIS</h1>
+  <h2 class="homepage-text">what's he even doing?</h2>
+
+  <header>
+    <video class="homepage-banner" loop autoplay muted>
+      <source src="./resources/videos/practice_sitting_at_desk.mp4" type="video/mp4">
+      Video Not Supported
+    </video>
+  </header>
+
+  <nav>
+    <img class="homepage-menu" src="./resources/photos/afro_pick.png">
+  </nav>
+
+  <footer>
+    <a href="https://www.linkedin.com/in/myles-harris-2b6059155" target="_blank">
+      <img class="homepage-contact linkedin" src="./resources/photos/linkedin_logo.png">
+    </a>
+    <a href="https://www.instagram.com/millennium_myles/" target="_blank">
+      <img class="homepage-contact ig" src="./resources/photos/instagram_logo.png">
+    </a>
+  </footer>
+
 </body>
 
 </html>
